<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_new_post"
        android:icon="@drawable/new_post_icon"
        android:title="@string/new_post" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/map_icon"
        android:title="@string/map" />


    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_icon"
        android:title="@string/main_layout" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/chat_icon"
        android:title="@string/chat" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile_icon"
        android:title="@string/profile" />


</menu>